# VibeCodingTracker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  TODO.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: cliff.toml  dependabot.yml
.github/agents/: update-repo.agent.md
.github/workflows/: auto_labeler.yml  auto_review_merge.yml  build_image.yml  build_release.yml  code-quality-check.yml  code_scan.yml  pre-commit-updater.yml  release_drafter.yml  semantic-pull-request.yml  test.yml
benches/: benchmarks.rs
examples/: analysis_result_gemini.json  test_conversation_gemini.json
openspec/changes/archive/2026-03-29-add-usage-daily-weekly-grouping/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-29-add-usage-daily-weekly-grouping/specs/usage-time-grouping/: spec.md
src/: cli.rs  constants.rs  lib.rs  main.rs
src/analysis/: batch_analyzer.rs  gemini_analyzer.rs
src/display/analysis/: averages.rs  interactive.rs  table.rs
src/display/common/: averages.rs  traits.rs
src/display/usage/: averages.rs  interactive.rs  mod.rs  table.rs  text.rs
src/models/: gemini.rs  usage.rs
src/pricing/: calculation.rs  mod.rs
src/update/: github.rs
src/usage/: calculator.rs  mod.rs
tests/integrations/: analysis_tests.rs  cli_tests.rs  pricing_tests.rs  usage_tests.rs
